--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -2,39 +2,54 @@
   text-align: center;
   padding: 1rem;
   background: white;
+  
+}
+
+.container div{
+  width: 100%;
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 3rem;
   color: #ff69b4;
   margin-bottom: 2rem;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem;
-  margin-top: 2rem;
+.home_wrapper{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
+.home_wrapper div:hover {
+  background: #e0e0e0;
+}
+
+.home_wrapper div{
+  margin: 10px;
+  padding: 30px;
+  height: 10vh;
+  background: #f7f7f7;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+  
 .button {
-  background: #f0f0f0;
   border-radius: 10px;
-  padding: 2rem;
-  text-align: center;
+  text-align: left;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.link_align{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-decoration: none;
   color: black;
   font-weight: bold;
-  transition: background 0.3s;
-}
-
-.button:hover {
-  background: #e0e0e0;
 }
 
 .button img {
