--- a/src/styles/course-search-style.css
+++ b/src/styles/course-search-style.css
@@ -4,23 +4,14 @@
    .component-arrangement {
     display: flex;
     flex-direction: column; /* Stack children vertically */
-    margin-bottom: 20px; /* Space below the search bar */
-  }
-  
-  .search-bar {
-    width: 250px;
-    padding: 10px;
-    box-sizing: border-box;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px; /* Space below the search bar */
+    margin-bottom: 0px; /* Space below the search bar */
   }
   
   .course-block {
     width: 330px;
-    border: 1px solid #ccc;
+    border: 2px solid #cccccc;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: -10px;
     border-radius: 5px;
     background-color: #fff;
   }
@@ -29,4 +20,33 @@
     position: absolute;
     top: 10px;
   }
+
+  .search-bar-and-search-button{
+    flex-direction: row;
+    margin-bottom: 0px; /* Space below the search bar */
+    justify-content: center;
+    align-items: center;
+  }
+  .search-bar {
+    width: 250px;
+    padding: 8px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    border: 2px solid #8f8f8f;
+    margin: 2px 1px;
+  }
+  .search-button {
+    background-color: #ffa3f4; /* Green */
+    border: 1px;
+    color: white;
+    padding: 7px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+  }
+
   
