--- a/src/styles/course-search-style.css
+++ b/src/styles/course-search-style.css
@@ -1,14 +1,14 @@
 /* styles/course-search-style.css */
 
 /* Flex container for vertical alignment */
-   .component-arrangement {
-    display: flex;
-    flex-direction: column; /* Stack children vertically */
-    margin-bottom: 0px; /* Space below the search bar */
-  }
+.component-arrangement {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
   
   .course-block {
-    width: 330px;
+    width: 310px;
     border: 2px solid #cccccc;
     padding: 10px;
     margin-bottom: -10px;
@@ -16,16 +16,24 @@
     background-color: #fff;
   }
 
-  .fix-top{
-    position: absolute;
-    top: 10px;
+  .header {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
   }
 
-  .search-bar-and-search-button{
-    flex-direction: row;
-    margin-bottom: 0px; /* Space below the search bar */
+  .fix-top {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+
+  .search-bar-and-search-button {
+    display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px; /* 검색창과 버튼 사이의 간격 조절 */
   }
   .search-bar {
     width: 250px;
@@ -36,17 +44,26 @@
     margin: 2px 1px;
   }
   .search-button {
-    background-color: #ffa3f4; /* Green */
-    border: 1px;
+    background-color: #ffa3ee;
+    border: none;
     color: white;
-    padding: 7px 25px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    padding: 10px 20px;
     font-size: 16px;
-    margin: 5px 2px;
     cursor: pointer;
     border-radius: 4px;
+  }
+  .search-button:hover {
+    background-color: #45a049;
+  }
+
+  .courses-container {
+    width: 100%;
+    max-width: 800px; /* 적절한 너비 설정 */
+    max-height: 770px; /* 적절한 높이 설정 */
+    overflow-y: auto;
+    margin-top: 0px;
+    overflow-y: auto;
+  overflow-x: hidden; /* 가로 스크롤 제거 */
   }
 
   
