--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -10,7 +10,7 @@
 }
 
 .title {
-  font-size: 3rem;
+  font-size: 3vw;
   color: #ff69b4;
   margin-bottom: 2rem;
 }
@@ -27,7 +27,7 @@
 
 .home_wrapper div{
   margin: 10px;
-  padding: 30px;
+  padding: 20px;
   height: 10vh;
   background: #f7f7f7;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
