--- a/src/styles/course-search-style.css
+++ b/src/styles/course-search-style.css
@@ -13,7 +13,10 @@
     padding: 10px;
     margin-bottom: -10px;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: #ffffff;
+  }
+  .course-block:hover{
+    background-color: #cecece;
   }
 
   .header {
