--- a/src/styles/course-search-style.css
+++ b/src/styles/course-search-style.css
@@ -14,6 +14,7 @@
     margin-bottom: -10px;
     border-radius: 5px;
     background-color: #ffffff;
+    cursor: pointer;
   }
   .course-block:hover{
     background-color: #cecece;
