--- a/src/styles/course-search-style.css
+++ b/src/styles/course-search-style.css
@@ -75,12 +75,28 @@
 
   .courses-container {
     width: 100%;
-    max-width: 800px; /* 적절한 너비 설정 */
-    max-height: 770px; /* 적절한 높이 설정 */
+    max-width: 800px;
+    max-height: 600px;
     overflow-y: auto;
     margin-top: 0px;
-    overflow-y: auto;
-  overflow-x: hidden; /* 가로 스크롤 제거 */
-  }
+    overflow-x: hidden;
+}
+
+/* 스크롤바 스타일링 (웹킷 기반 브라우저용) */
+.courses-container::-webkit-scrollbar {
+    width: 8px; /* 스크롤바 너비 */
+}
+
+.courses-container::-webkit-scrollbar-track {
+    background: #f1f1f1; /* 스크롤바 배경색 */
+}
+
+.courses-container::-webkit-scrollbar-thumb {
+    background: #888; /* 스크롤바 색상 */
+}
+
+.courses-container::-webkit-scrollbar-thumb:hover {
+    background: #555; /* 스크롤바 호버 색상 */
+}
 
   
