--- a/src/styles/course-search-style.css
+++ b/src/styles/course-search-style.css
@@ -8,16 +8,26 @@
 }
   
   .course-block {
-    width: 330px;
-    border: 2px solid #cccccc;
-    padding: 10px;
-    margin-bottom: -10px;
+    width: 100%;
+    border: 1px solid #cccccc; /* 다른 경계선 추가 */
+    padding: 5px; /* 패딩을 추가하여 내부 여백 조절 */
+    margin-bottom: 0px; /* 아래쪽에 여백 제거 */
     border-radius: 5px;
     background-color: #ffffff;
     cursor: pointer;
-  }
+    text-align: left;
+    border-bottom: 1px solid #cccccc; /* 아래 경계선만 적용 */
+    border-top: 1px;
+    border-right: 1px;
+    border-left:1px;
+    }
   .course-block:hover{
     background-color: #cecece;
+  }
+  .course-block h3,
+  .course-block p {
+  margin: 5px 0; /* 기본 마진을 줄여서 요소 간격 줄이기 */
+  padding: 0; /* 패딩 제거 */
   }
 
   .header {
