--- a/src/styles/timetable.css
+++ b/src/styles/timetable.css
@@ -1,6 +1,11 @@
-.title{
-    text-align: left;
+.title-box{
     margin-left: 16px;
+    margin-right: 16px;
+    margin-top: 16px;
+}
+
+.title{
+    font-weight: bold;
 }
 
 .timetable-container {
@@ -10,7 +15,7 @@
   .timetable-header {
     background-color: #f5f5f5;
     border: 1px solid #ccc;
-    height: 50px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,7 +24,7 @@
   .timetable-time {
     background-color: #f5f5f5;
     border: 1px solid #ccc;
-    height: 100px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,7 +32,7 @@
   
   .timetable-cell {
     border: 1px solid #ccc;
-    height: 100px;
+    height: 60px;
     position: relative;
     display: grid;
   }
@@ -35,15 +40,24 @@
   .timetable-card-wrapper {
     display: grid;
     grid-template-rows: repeat(auto-fill, 100px);
+    height: 100%;
   }
   
   .timetable-card {
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    /* justify-content: center; */
     position: relative;
     z-index: 1;
     border-radius: 0;
   }
+
+.course-name{
+    font-size: 12px
+}
+
+.course-room{
+    font-size: 12px;
+}
