--- a/src/styles/course-search-style.css
+++ b/src/styles/course-search-style.css
@@ -58,12 +58,13 @@
   border: 0px;
   box-sizing: border-box;
   border-radius: 10px;
-  background-color: hsl(0, 0%, 60%);
+  background-color: hsl(0, 1%, 76%);
   color: black;
   font-size: 16px; /* 폰트 크기 설정 */
+  outline: none;
 }
 .search-bar::placeholder {
-  color: black; /* placeholder 텍스트 색상 */
+  color: rgb(59, 59, 59); /* placeholder 텍스트 색상 */
 }
 
 /* 검색 버튼 스타일 */
