--- a/src/styles/timetable.css
+++ b/src/styles/timetable.css
@@ -24,7 +24,7 @@
   .timetable-time {
     background-color: #f5f5f5;
     border: 1px solid #ccc;
-    height: 60px;
+    height: 9vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,7 +32,7 @@
   
   .timetable-cell {
     border: 1px solid #ccc;
-    height: 60px;
+    height: 9vh;
     position: relative;
     display: grid;
   }
