--- a/src/styles/timetable.css
+++ b/src/styles/timetable.css
@@ -1,10 +1,10 @@
-.title-box{
+.timetable-title-box{
     margin-left: 16px;
     margin-right: 16px;
     margin-top: 16px;
 }
 
-.title{
+.timetable-title{
     font-weight: bold;
 }
 
@@ -12,47 +12,47 @@
     padding: 16px;
   }
   
-  .timetable-header {
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.timetable-header {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
   
-  .timetable-time {
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    height: 9vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .timetable-cell {
-    border: 1px solid #ccc;
-    height: 9vh;
-    position: relative;
-    display: grid;
-  }
-  
-  .timetable-card-wrapper {
-    display: grid;
-    grid-template-rows: repeat(auto-fill, 100px);
-    height: 100%;
-  }
-  
-  .timetable-card {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
-    position: relative;
-    z-index: 1;
-    border-radius: 0;
-  }
+.timetable-time {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  height: 9vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.timetable-cell {
+  border: 1px solid #ccc;
+  height: 9vh;
+  position: relative;
+  display: grid;
+}
+
+.timetable-card-wrapper {
+  display: grid;
+  grid-template-rows: repeat(auto-fill, 100px);
+  height: 100%;
+}
+
+.timetable-card {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: center; */
+  position: relative;
+  z-index: 1;
+  border-radius: 0;
+}
 
 .course-name{
     font-size: 12px
