style: 타임테이블 헤더 패딩 값 픽셀 수정

--- a/src/styles/timetable.css
+++ b/src/styles/timetable.css
@@ -10,11 +10,13 @@
 
 .timetable-header {
   background-color: white;
-  padding: 1rem;
+  padding: 10px;
 }
 
 .timetable-container {
-  padding: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
 }
 
   
