--- a/src/styles/bottom-sheet-style.css
+++ b/src/styles/bottom-sheet-style.css
@@ -1,15 +1,6 @@
-.page-container {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f5f5f5; /* 페이지 배경색 설정 */
-  box-sizing: border-box; /* 박스 사이징 설정 */
-}
 
 .bottom-sheet-container {
-  width: 393px;
+  width: 100%;
   height: 70%;
   background-color: white;
   padding: 16px;
@@ -30,43 +21,64 @@
   margin-bottom: 10px;
 }
 
-.search-bar {
+/* 검색바레이아웃 */
+.search-bar { 
   width: 215px;
-  height: 30px; /* 높이를 조정하여 세로 길이를 줄임 */
+  height: 30px; 
   border: 0px;
   box-sizing: border-box;
   border-radius: 8px;
   background-color: #dbdada;
   color: black;
-  font-size: 14px; /* 폰트 크기 설정 */
+  font-size: 14px; 
   outline: none;
   padding-left: 7px;
 
 }
+/* 검색바 기본텍스트 색 */
 .search-bar::placeholder{
-  color: rgb(162, 91, 91); /* placeholder 텍스트 색상 */
+  color: rgb(0, 0, 0); 
 }
 
 .courses-container {
-  margin-right: 32px;
-  width: 90%;
-  max-height: 700px;
-  box-sizing: border-box; /* 박스 사이징 설정 */
+  width: 100%;
+  max-height: 450px;
+  overflow-y: auto;
+  margin-top: 0px;
+  overflow-x: hidden;
+}
+/* 스크롤바 스타일링 (웹킷 기반 브라우저용) */
+.courses-container::-webkit-scrollbar {
+  width: 8px; /* 스크롤바 너비 */
+}
+
+.courses-container::-webkit-scrollbar-track {
+  background: #f1f1f1; /* 스크롤바 배경색 */
+}
+
+.courses-container::-webkit-scrollbar-thumb {
+  background: #888; /* 스크롤바 색상 */
+}
+
+.courses-container::-webkit-scrollbar-thumb:hover {
+  background: #555; /* 스크롤바 호버 색상 */
 }
 
 .course-block {
   width: 100%;
   border: 1px solid #cccccc;
-  padding: 16px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   margin-bottom: 0px;
   border-radius: 5px;
   background-color: #ffffff;
   text-align: left;
   position: relative;
-  border-bottom: 1px solid #cccccc; /* 아래 경계선만 적용 */
+  border-bottom: 1px solid #cccccc; 
   border-top: 1px;
   border-right: 1px;
-  border-left:1px;
+  border-left:1px; 
+  /* 아래쪽만 선이 생기게 하는 4줄 코드 */
 }
 
 .course-block h3,
@@ -75,6 +87,7 @@
   padding: 0;
 }
 
+/* 별과 우측 강의평 및 추가하기 버튼을 모두 갖는 하단 컨테이너 */
 .rating-container {
   display: flex;
   align-items: center;
@@ -96,7 +109,6 @@
   border: none; /* 기본 테두리 제거 */
   cursor: pointer; /* 클릭 커서 표시 */
   text-align: center; /* 텍스트 중앙 정렬 */
-  display: inline-block; /* 버튼 크기 조정 가능 */
   min-width: 40px; /* 최소 너비 설정 */
   max-width: 80px; /* 최대 너비 설정 */
 }
@@ -135,8 +147,6 @@
   cursor: pointer; /* 클릭 커서 표시 */
   text-align: center; /* 텍스트 중앙 정렬 */
   display: inline-block; /* 버튼 크기 조정 가능 */
-  min-width: 40px; /* 최소 너비 설정 */
-  max-width: 80px; /* 최대 너비 설정 */
 }
 
 .course-button:hover {
@@ -149,3 +159,22 @@
     width: 90%;
   }
 }
+
+.drawer-content {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.close-button{
+  width: 80%;
+  background-color: #f976c7;
+  margin: auto;
+}
+
+.close-button:hover{
+  background-color: #fc3796;
+}
+
+
