--- a/src/styles/bottom-sheet-style.css
+++ b/src/styles/bottom-sheet-style.css
@@ -42,7 +42,9 @@
 
 .courses-container {
   width: 100%;
+  height: 400px;
   max-height: 450px;
+  min-height: 400px;
   overflow-y: auto;
   margin-top: 0px;
   overflow-x: hidden;
