feat: 강의평 등록 페이지 뒤로가기 버튼 추가

--- a/src/styles/review-register.css
+++ b/src/styles/review-register.css
@@ -44,3 +44,10 @@
     justify-content: center;
     margin: 0 auto;
 }
+
+.register-header-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 16px;
+}
