--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -54,3 +54,8 @@
     background-color: #ec407a; /* 버튼 호버 색상 조정 */
 }
 
+.review-container {
+    height: calc(100vh - 112px); /* Adjust this value if necessary to match your navigation height */
+    overflow-y: auto;
+    padding-bottom: 112px; /* Ensure content doesn't overlap with navigation */
+  }
