--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -41,6 +41,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 260px !important; 
 }
 
 .home-link-align{
